--- a/deployment.yaml
+++ b/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata: 
   name: hello-world-nginx
 spec:
-  replicas: 2
+  replicas: 5
   selector:
     matchLabels:
       app: hello-world-nginx 
@@ -17,6 +17,10 @@ spec:
         image: nginx:1.17-alpine
         ports:
         - containerPort: 80
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "200m"
 
         volumeMounts:
         - mountPath: /etc/nginx/conf.d
